# TER

./: README.md
PCL/: CMakeLists.txt  PCD_to_PLY.cpp  PCD_to_VTK.cpp  VTKViewer.cpp  convert_OFF_to_PLY.cpp  convex_hull.cpp  merge_and_delete.cpp  pcl_GPT.cpp  pcl_GPT_tree.cpp  pcl_test.cpp  recalage.cpp  reconstruction.py
PCL/build-ter-Desktop_Qt_5_7_0_GCC_64bit-Debug/: .qmake.stash  Makefile  mesh.vtk  moc_mainwindow.cpp  ter  ui_mainwindow.h
PCL/buildPCL/: CMakeCache.txt  Makefile  cmake_install.cmake  off_to_ply  pipeline_pcd  view_pcd
PCL/opencv/: ptsInteret_Corres.py
PCL/ter/: mainwindow.cpp  mainwindow.h  mainwindow.ui  process.cpp
app/: app.pro  images.cpp  images.h  main.cpp  main.cpp.autosave  mainwindow.cpp  mainwindow.h  mainwindow.ui  myopengl.cpp  myopengl.h  openglperso.cpp  openglperso.h
application_photogrammetrie/: ViewCloud.cpp  convert_PLY_to_PCD.cpp  pipeline.cpp
application_photogrammetrie/opencv/: reconstruction.py
application_photogrammetrie/resultats/PLY_file/: guitare23.ply  guitare34.ply  guitare45.ply  guitare67.ply  guitare78.ply  statue10et11.ply  statue1et2.ply  statue3et4.ply  statue4et5.ply  statue5et6.ply
application_photogrammetrie/resultats/data_reference/: statue_officielle.ply  statue_officielle.vtk
application_photogrammetrie/resultats/images_par_deux/: cafe12.pcd  guitare12.pcd  guitare12::3.pcd  guitare12::3::4.pcd  guitare12::3::4::5::6.pcd  guitare23.pcd  (+12 more)
application_photogrammetrie/ter/: main.cpp  process.cpp  process.h  ter.pro
data/: imageDroite.ppm  imageGauche.ppm
opencv-4.7.0/: opencv.pri
(+16 files in other folders)
